final tit bit changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <section class="top-nav">
-      <div>Disaster App</div>
+      <div><h5>Disaster Tracker</h5></div>
       <input id="menu-toggle" type="checkbox" />
       <label class="menu-button-container" for="menu-toggle">
         <div class="menu-button"></div>
@@ -34,7 +34,7 @@
       </ul>
     </section>
     <div id="disaster page">
-      <div class="container" style="color: white">
+      <div class="container mt-2" style="color: white">
         <span class="display-6"> Set Disaster Types</span>
       </div>
       <div class="container mt-3">
