--- a/rescue.html
+++ b/rescue.html
@@ -17,7 +17,7 @@
   <body>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <section class="top-nav">
-      <div>Disaster App</div>
+      <div><h5>Disaster Tracker</h5></div>
       <input id="menu-toggle" type="checkbox" />
       <label class="menu-button-container" for="menu-toggle">
         <div class="menu-button"></div>
