changed rescue html

--- a/rescue.html
+++ b/rescue.html
@@ -40,14 +40,14 @@
       <div class="card text-white bg-black mb-3 m-lg-3 card border-light" style="max-width: 18rem;">
         <div class="card-header">Bn NDRF</div>
         <div class="card-body">
-          <h5 class="card-title">2nd BN NDRF, Near RRI Camp. Haringhata,  Mohanpur, Nadia, (West Bengal)  Pin - 741246</h5>
-          <p class="card-text">033-25875032 <br>wb02-ndrf@nic.in</p>
+          <h5 class="card-title">2nd BN NDRF, Near RRI Camp. Haringhata,  Mohanpur,China  Pin - 712246</h5>
+          <p class="card-text">033-25875032 <br>wb02-cisar@nic.in</p>
         </div>
       </div>
       <div class="card text-white bg-black mb-3 m-lg-3 card border-light" style="max-width: 18rem;">
         <div class="card-header">Bn NDRF</div>
         <div class="card-body">
-          <h5 class="card-title">3rd BN NDRF, PO-Mundali, Cuttack - Odisha Pin - 754013</h5>
+          <h5 class="card-title">3rd BN NDRF,USA Pin - 754013</h5>
           <p class="card-text">0671-2879710 <br>ori03-ndrf@nic.in</p>
         </div>
       </div>
